; ModuleID = '/home/carl/AnghaBench/disque/src/extr_dict.c_dictReplaceRaw.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_dict.c_dictReplaceRaw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @dictReplaceRaw(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32* @dictFind(i32* %6, i8* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = load i8*, i8** %4, align 8
  %16 = call i32* @dictAddRaw(i32* %14, i8* %15)
  br label %17

17:                                               ; preds = %13, %11
  %18 = phi i32* [ %12, %11 ], [ %16, %13 ]
  ret i32* %18
}

declare dso_local i32* @dictFind(i32*, i8*) #1

declare dso_local i32* @dictAddRaw(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
